index file replace all table based code to bootstrap and java script based code

--- a/index.html
+++ b/index.html
@@ -1,217 +1,81 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
-  <head>
-    <meta charset="utf-8"> <!-- utf-8 works for most cases -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Forcing initial-scale shouldn't be necessary -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Use the latest (edge) version of IE rendering engine -->
-    <meta name="x-apple-disable-message-reformatting">  <!-- Disable auto-scale in iOS 10 Mail entirely -->
-    <title>templates</title> <!-- The title tag shows in email notifications, like Android 4.4. -->
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>templates</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link href="./temp.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <!-- Google Font Montserrat -->
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+  <!-- Bootstrap 5.2.1 bunddle -->
 
-    <!-- CSS Reset : BEGIN -->
-    <style>
-      html,
-      body {
-        margin: 0 auto !important;
-        padding: 0 !important;
-        height: 100% !important;
-        width: 100% !important;
-      }
+  <style media="screen">
 
-      a {
-        text-decoration: none;
-      }
+    * {
+      /* outline: 1px solid limegreen; */
+    }
 
-      h1 {
-        text-align: left;
-        padding: 22px 50px;
-        margin: 0;
-      }
+    h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: bold;
+    }
 
-      p {
-        margin: 0;
-        text-align: left;
-      }
+    .logo {
+      font-family: 'Montserrat-Bold', sans-serif;
+      padding: 5% 15%;
+      text-align: center;
+      background-color: #FA7070;
+      color: #fff;
+      
+    }
 
-    </style>
-    <!-- CSS Reset : END -->
+    .templates {
+      font-family: 'Montserrat', sans-serif;
+      text-align: center;
+      font-weight: 600;
+      font-size: 18px;
+      padding: 2% 12%;
+      background-color: #AEBDCA;
+    }
 
-
-
-    <style>
-      /* CSS Main : START */
-      * {
-        /* outline: 1px  solid limegreen; */
-        /*background: rgb(0 100 0 / 0.1);*/
-      }
-
-      .para {
-        font-family: sans-serif;
-        padding: 2px 5px;
-        display: inline-block;
-        color: #000;
-      }
-
-      .table-fixed-auto {
-        table-layout: fixed;
-      }
-
-      /* CSS Main : END */
+    .paragraph {
+      display: block;
+      text-decoration: none;
+      padding: 1% 0;
+    }
 
 
-      /* Mob Responsive : START */
-      @media only screen and (width: 480px), only screen and (max-width: 480px) {
-        .table-fixed-auto {
-          table-layout: auto;
-        }
 
-      }
-      /* Mob Responsive : END */
-    </style>
-  </head>
-  <body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly; background-color: #f1f1f1;">
-    <center style="width: 100%; background-color: #f1f1f1;">
-      <div style="max-width: 600px; margin: 0 auto; border: 1px solid #66baba; background-color: #F0EABE;">
-        <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" style="text-align: center;">
 
-          <!-- Main Row - 1: START -->
-          <tr>
-            <td colspan="2">
-              <h1 style="font-family: sans-serif;">Collection of Templates</h1>
-            </td>
-          </tr>
-          <!-- Main Row - 1: END -->
+  </style>
+</head>
+<body>
+  <!-- logo of site -->
+  <section class="logo">
+    <div class="row">
+      <h1 class="">Templates</h1>
+    </div>
+  </section>
 
-          <!-- Main Row - 2: START -->
-          <tr>
-            <td style="padding: 25px 50px">
-              <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" class="table-fixed-auto">
-
-                <tr>
-                  <td>
-                    <p><a href="romofyi.html" class="para">Romofyi</a></p>
-                  </td>
-                  <td>
-                    <p><a href="" class="para"></a></p>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <p><a href="lawn-garden.html" class="para">Lawn and Garden</a></p>
-                  </td>
-                  <td>
-                    <p><a href="real-estate.html" class="para">Real Estate</a></p>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <p><a href="travel.html" class="para">Travel</a></p>
-                  </td>
-                  <td>
-                    <p><a href="corporate.html" class="para">Corporate</a></p>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <p><a href="stories.html" class="para">Stories</a></p>
-                  </td>
-                  <td>
-                    <p><a href="photography.html" class="para">Photography</a></p>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <!-- Main Row - 2: END -->
-
-          <!-- Main Row - 3: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 3: END -->
-
-          <!-- Main Row - 4: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 4: END -->
-
-          <!-- Main Row - 5: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 5: END -->
-
-          <!-- Main Row - 6: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 6: END -->
-
-          <!-- Main Row - 7: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 7: END -->
-
-          <!-- Main Row - 8: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 8: END -->
-
-          <!-- Main Row - 9: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 9: END -->
-
-          <!-- Main Row - 10: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 10: END -->
-
-          <!-- Main Row - 11: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 11: END -->
-
-          <!-- Main Row - 12: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 12: END -->
-
-          <!-- Main Row - 13: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 13: END -->
-
-          <!-- Main Row - 14: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 14: END -->
-
-          <!-- Main Row - 15: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 15: END -->
-
-          <!-- Main Row - 16: START -->
-          <tr>
-            <td></td>
-          </tr>
-          <!-- Main Row - 16: END -->
-        </table>
+  <section class="templates">
+    <div class="row">
+      <div class="col gap-3">
+        <a href="romofyi.html" class="paragraph">Romofyi</a>
+        <a href="real-estate.html" class="paragraph">Real Estate</a>
+        <a href="travel.html" class="paragraph">Travel</a>        
       </div>
-    </center>
-  </body>
+      <div class="col gap-3">
+        <a href="corporate.html" class="paragraph">Corporate</a>
+        <a href="stories.html" class="paragraph">Stories</a>
+        <a href="photography.html" class="paragraph">Photography</a>        
+      </div>      
+    </div>
+  </section>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
